Textwrap bug

--- a/src/components/TemplateList.css
+++ b/src/components/TemplateList.css
@@ -27,6 +27,8 @@
   padding: 5px;
   font-size: 16px;
   font-weight: bolder;
+  word-break: break-word;
+  word-wrap: break-word;
   color: var(--green);
   /* max-width: 100%; */
 }
@@ -38,7 +40,8 @@
   padding-right: 5px;
   top: -15px;
   color: var(--greyed);
-  word-break: break-all;
+  word-break: break-word;
+  word-wrap: break-word;
   white-space: pre-wrap;
 }
 .template-val {
@@ -47,7 +50,8 @@
   position: relative;
   padding-left: 5px;
   padding-right: 5px;
-  word-break: break-all;
+  word-break: break-word;
+  word-wrap: break-word;
   white-space: pre-wrap;
   text-overflow: ellipsis;
 }
